--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
     background-color: rgba(10, 0, 30, 1); 
     line-height: 1.4em;
     font-weight: 60;
-    color: rgba(189, 228, 250);
+    color: rgba(189, 228, 250) !important;
+    
 }
 
 div {
@@ -29,8 +30,7 @@ div {
     margin: 0;
     padding: 0;
     line-height: 1.4em;
-    color: rgba(189, 228, 250);
-
+    color: rgba(189, 228, 250) !important;
     background-color: rgba(10, 0, 30, 1); 
 }
 
@@ -95,8 +95,6 @@ a:hover {
         position: static;
         display: block;
         margin-left: 2ch;
-        color: rgba(189, 228, 250);
-
     }
 
     .floating.header {
