--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 html {
     font-size: 20px;
     font-family: ThreadsMonoGX;
-    color: rgba(189, 228, 250) !important;
+    color: #bde4fa !important;
 
 }
 
@@ -21,7 +21,7 @@ body {
     background-color: rgba(10, 0, 30, 1); 
     line-height: 1.4em;
     font-weight: 60;
-    color: rgba(189, 228, 250) !important;
+    color: #bde4fa !important;
     
 }
 
@@ -32,7 +32,7 @@ div {
     margin: 0;
     padding: 0;
     line-height: 1.4em;
-    color: rgba(189, 228, 250) !important;
+    color: #bde4fa !important;
     background-color: rgba(10, 0, 30, 1); 
 }
 
@@ -82,7 +82,7 @@ div {
 
 a {
     text-decoration: none;
-    color: rgba(189, 228, 250, 1);
+    color: #bde4fa;
 }
 
 a:hover {
