--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 html {
     font-size: 20px;
     font-family: ThreadsMonoGX;
-    color: #bde4fa !important;
 
 }
 
@@ -32,7 +31,8 @@ div {
     margin: 0;
     padding: 0;
     line-height: 1.4em;
-    color: #bde4fa !important;
+    color: #bde4fa;
+
     background-color: rgba(10, 0, 30, 1); 
 }
 
@@ -77,7 +77,7 @@ div {
 #thread {
     font-weight: 100;
     position: absolute;
-    color: rgba(252, 0,0);
+    color: #fc0000;
 }
 
 a {
