removed important flags

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     background-color: rgba(10, 0, 30, 1); 
     line-height: 1.4em;
     font-weight: 60;
-    color: #bde4fa !important;
+    color: #bde4fa;
     
 }
 
