--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,12 +1,18 @@
 @font-face {
     font-family: 'ThreadsMonoGX';
-    src: url(../font/ThreadsMonoGX.ttf);
+    src: url(../font/ThreadsMono.ttf);
     font-weight: 1 999;
 }
 
+@keyframes myAnim {
+    0% {font-variation-settings: "wght" 20; }
+    50% {font-variation-settings: "wght" 180;}
+    100% {font-variation-settings: "wght" 20;}
+} 
+
 html {
-    font-size: 16px;
-    font-family: ThreadsMonoGX;
+    font-size: 20px;
+    font-family: ThreadsMono;
 
 }
 
@@ -17,23 +23,26 @@ pre {
 body {
     margin: 0;
     padding: 0;
-    background-color: rgba(10, 0, 30, 1); 
+    /* background-color: rgba(10, 0, 30, 1);  */
+    background-color: rgba(255, 255, 255, 1);
     line-height: 1.4em;
-    font-weight: 60;
-    color: #bde4fa;
-    
+    font-variation-settings: "wght" 60;
+
+    /* color: #bde4fa; */
+    color: rgba(0,0,0,1);
 }
 
-div {
+.floating {
     display: block;
     position:static;
     white-space: pre;
     margin: 0;
     padding: 0;
     line-height: 1.4em;
-    color: #bde4fa;
 
-    background-color: rgba(10, 0, 30, 1); 
+    /* background-color: rgba(10, 0, 30, 1);  */
+    background-color: rgba(255,255,255,1);
+    
 }
 
 .floating.central {
@@ -53,9 +62,12 @@ div {
     display: inline-block;
 }
 
-.floating.footer div#footer-text {
+/* .floating.footer div#footer-text {
     color: #76c9e1;
-}
+
+} */
+
+
 
 .floating.header {
     margin: 0;
@@ -78,36 +90,62 @@ div {
     margin: 0;
     padding: 0;
     font-weight: inherit;
-    font-family: ThreadsMonoGX;
+    font-family: ThreadsMono;
     display: block;
-    color: rgba(189, 228, 250, 0.6);
+    /* color: rgba(189, 228, 250, 0.6); */
+    color: rgba(0,0,0,0.6);
 }
 
-#thread {
-    font-weight: 100;
+.floating.header span#thread {
+    font-variation-settings: "wght" 60;
     position: absolute;
-    color: #fc0000;
+    color: rgba(255, 45, 50, 1);
     text-transform: uppercase;
+
+    -moz-font-feature-settings: 'ss01' on;
+    -ms-font-feature-settings: 'ss01' on;
+    -o-font-feature-settings: 'ss01' on;
+    -webkit-font-feature-settings: 'ss01' on;
+    font-feature-settings: ‘ss01’;
+
+    animation: myAnim infinite; 
+    animation-duration: 4.5s; 
+    animation-timing-function: ease; 
+    transition: ease-out;
 }
+
+
+
+
 
 a {
     text-decoration: none;
-    color: #bde4fa;
+    /* color: #bde4fa; */
+    color: rgba(0,0,0,1);
+
+    /* font-variation-settings: "wght" 80; */
+
 }
 
 a:hover {
     opacity: 1;
-    font-weight: 100;
+    font-variation-settings: "wght" 100;
+
+    -moz-font-feature-settings: 'ss01' on;
+    -ms-font-feature-settings: 'ss01' on;
+    -o-font-feature-settings: 'ss01' on;
+    -webkit-font-feature-settings: 'ss01' on;
+    font-feature-settings: ‘ss01’;
 }
 
 /* this is pretty much a no-javascript fallback */
 /* ensures the information is still on the page somehow */
 @media (max-width: 38em) {
-    div{
+    /* div{
         position: static;
         display: block;
         margin-left: 2ch;
-    }
+    } */
 
     .floating.header {
         display: inline-block;
@@ -116,5 +154,9 @@ a:hover {
     .floating.footer{
         display: inline-block;
         position: static;
+    }
+
+    #bg{
+        display:none;
     }
 }
