--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'ThreadsMonoGX';
+    font-family: 'ThreadsMono';
     src: url(../font/ThreadsMono.ttf);
     font-weight: 1 999;
 }
