hugo version of site

--- a/layouts/_default/map.html
+++ b/layouts/_default/map.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <main role="main">
-    <h1>{{- .Title -}}</h1>
-    {{ .Content  }}
+<div id="single-content">
+{{- .Content -}}
+</div>
 </main>
 {{ end }}
