--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'ThreadsMono';
-    src: url(../font/ThreadsMono.ttf);
+    font-family: 'ThreadsMonoStencil';
+    src: url(../font/ThreadsMonoStencil.ttf);
     font-weight: 1 999;
 }
 
@@ -18,9 +18,9 @@
 
 html {
     font-size: 20px;
-    font-family: ThreadsMono;
+    font-family: ThreadsMonoStencil;
+    min-height: 100%;
 }
-
 
 pre {
     display: none;
@@ -32,9 +32,39 @@ p {
     padding: 0;
 }
 
+ul#artist-names {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul#artist-names li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    width: 25ch;
+    vertical-align: top;
+}
+
+ul#artist-info {
+    list-style: none;
+    margin: 0;
+    margin-top: 1.2em;
+    margin-left: 2ch;
+    padding: 0;
+}
+
+ul#artist-info li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    max-width: 47ch;
+    vertical-align: top;
+}
+
 ul#about-thread-grid {
     list-style: none;
-    margin: 0 0 8.4em 0;
+    margin: 0 0 7.2em 0;
     padding: 0;
 }
 
@@ -42,12 +72,37 @@ ul#about-thread-grid {
     display: inline-block;
     margin: 0;
     padding: 0;
-    max-width: 29ch;
+    max-width: 34ch;
     vertical-align: top;
 }
 
 #about-thread-grid li span{
     display: block;
+}
+
+ul#timings-grid {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul#timings-grid li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    max-width: 22ch;
+    vertical-align: top;
+}
+
+ul#workshop-info {
+    list-style: none;
+    padding-left: 3ch;
+    max-width: 60ch;
+}
+
+ul#workshop-info li:before {
+    content: "\2014\00a0";
+    margin-left: -2ch;
 }
 
 body {
@@ -58,11 +113,6 @@ body {
     background-color: rgba(10, 0, 30, 1);
     color: rgba(189,228,250,1);
 
-    -moz-transition: 5s ease-in-out;
-    -ms-transition: 5s ease-in-out;
-    -o-transition: 5s ease-in-out;
-    -webkit-transition: 5s ease-in-out;
-    transition: 5s ease-in-out;
 }
 
 .border {
@@ -88,13 +138,13 @@ body {
     padding: 0;
     left: 0ch;
     background-color: inherit; 
+    z-index: 1000;
 }
 
 .ascii.footer {
-    position:relative;
-    top: 9.6em;
-    left: 2ch;
-    width:100%;
+    position:absolute;
+    margin-top: 2.4em;
+    width: 100%;
     white-space: normal;
 }
 .ascii.footer div {
@@ -107,7 +157,6 @@ div#header-text {
     left: 2ch;
     top: calc(1.2em * 1);
     white-space: pre;
-    margin:0;
     padding:0;
     z-index: 999;
 }
@@ -128,29 +177,24 @@ div#header-text {
     font-feature-settings: ‘ss01’;
 }
 
-/* .ascii.footer div#footer-text {
-    color: #76c9e1;
-} */
-
-/* bg = main canvas */
 #bg {
     display: block;
     position: absolute;
-    top: 0;
+    top: 2.4em;
     left: 0;
     white-space: pre;
     z-index: -9999;
     margin: 0;
     padding: 0;
     font-weight: inherit;
-    font-family: ThreadsMono;
+    font-family: ThreadsMonoStencil;
     color: inherit;
     background-color: transparent;
 }
 
 span#thread {
-    position: absolute;
-
+    display: inline;
+    
     -moz-font-feature-settings: "ss01" on;
     -ms-font-feature-settings: "ss01" on;
     -o-font-feature-settings: "ss01" on;
@@ -167,44 +211,34 @@ span#thread {
 div#single-content {
     position: relative;
     display: block;
-    margin: 0 3ch 0 0;
+    margin: 0 2ch 0 0;
     padding:0;
-    left: 2ch;
+    padding-left:2ch;
     top: calc(1.2em * 2);
-    max-width: 60ch;
     font-family: ThreadsMonoPlain;
 }
 
-div#sidebar {
-    position: absolute;
-    margin:0;
+div#single-content p {
+    max-width: 60ch;
+}
+
+div#artist-list {
+    margin:0 0 0 2ch;
     padding:0;
-    top: calc(1.2em * 5);
-    left: 3ch;
-    width: 22ch;
-    margin-right: 2ch;
 }
 
 div#artist-details {
-    position: absolute;
-    margin:0;
+    margin: 0;
     padding:0;
-    top: calc(1.2em * 5);
-    left: 25ch;
-    width: 16ch;
+    width: 24ch;
     word-wrap: break-word;
-    margin-right: 2ch;
 }
 
 div#artist-content {
-    position: absolute;
-    display: inline;
-    margin:0;
-    padding:0;
-    top: calc(1.2em * 5);
-    left: 42ch;
-    margin-right: 2ch;
+    padding: 0;
+    margin: 0;
     font-family: ThreadsMonoPlain;
+    margin-right: 2ch;
 }
 
 div#header-menu {
@@ -212,20 +246,20 @@ div#header-menu {
     background-color: inherit;
     z-index: 999;
     position: relative;
-    top: calc(1.2em * 1);
     left: 2ch;
 }
 
 a {
     text-decoration: none;
     color: inherit;
+    font-family: ThreadsMonoStencil;
 }
 
 #single-content a {
-    opacity: 0.6;
+    opacity: 0.7;
 }
 
-a.active {
+.active {
     font-variation-settings: "wght" 100;
 
     -moz-font-feature-settings: "ss01" on;
@@ -284,8 +318,8 @@ span.surveillance {
     color: #fc1200;
 }
 
-/* this is pretty much a no-javascript fallback */
-/* ensures the information is still on the page somehow */
-@media (max-width: 30em) {
-
+@media (max-width: 767px) {
+    .timings-padding {
+        display: none;
+    }
 }
