--- a/layouts/_default/map.html
+++ b/layouts/_default/map.html
@@ -41,7 +41,7 @@ Entrance _____ - <span id = "castle" class="map_name">Elle Castle</span> - - - -
 # - - - - - - # - - - - - - - -* - - - - - - - - - - * - - - - - - - - - -#<br>
 # - - - - - - ### . . .#######*** - - - - - - - - - ***####################<br>
 # - - - - - - # - - - - - - - -*- - - - - - - - - - -* - - - - - -  - - - #<br>
-# - - - - - - # - <span id="kwon" class="map_name">Claire Kwong</span> #######. . . .######### - - - - <span id="ba" class="map_name">Baqi Ba</span> - -#<br>
+# - - - - - - # - <span id="kwong" class="map_name">Claire Kwong</span> #######. . . .######### - - - - <span id="ba" class="map_name">Baqi Ba</span> - -#<br>
 # <span id="popovic" class="map_name">Kata Popovic</span># - - - - - - - -# - - - - - - - - -  -# - - - - - - - - - -#<br>
 # - - - - - - # - - - - - - - -# - - - - - - - - - - # - - - - - - - - - -#<br>
 ############### - - - - - - - -# - - - - - - - - - - . - - - - - - - - - -#<br>
