--- a/layouts/artists/single.html
+++ b/layouts/artists/single.html
@@ -11,7 +11,7 @@
                 <a href="/about/#about-thread-grid"><span class = {{ lower . }}>{{ upper . }}</a></span><br>
             {{ end }}</p>
             <p class = "section">
-                <a href = "/map/?highlight={{ path.Base .URL }}">GO TO MAP >></a>
+                <a href="/map/?highlight={{ path.Base .Permalink }}">GO TO MAP >></a>
             </p>
         </div>
     </li>
