--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,9 +4,7 @@
     <meta name="description" content="{{ .Site.Params.description }}" />
     <meta name="author" content="{{ .Site.Params.author }}" />
 	<title>{{ block "title" . }}{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}{{ end }}</title>
-    <link rel="stylesheet" type="text/css" href="{{- .Site.BaseURL -}}css/style.css" />
-    <script type="text/javascript" src="{{- .Site.BaseURL -}}js/page.js"></script>
-    
-    
-    {{ .Hugo.Generator }}
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <script type="text/javascript" src="/js/page.js"></script>
+    {{ hugo.Generator }}
 </head>
