--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,17 +1,16 @@
 <div class = "ascii header" id = "header">
-<div id="header-text"><a href="{{- .Site.BaseURL -}}">So, How Is <span id = "thread"></span><span id="working-for-you">Working For You?</span></a><br/></div>
+<div id="header-text"><a href="/">So, How Is <span id = "thread"></span><span id="working-for-you">Working For You?</span></a><br/></div>
 </div>
 <div id="header-menu">
     {{ $currentPage := . }}
     {{ $menu := .Site.Menus.main}}
     {{- range $elem_index, $elem_val := $menu -}}
         <a href="{{- .URL -}}"
-        {{- if eq .Name "invert" -}}onClick="invertColours()"{{- end -}}
-        {{- if hasPrefix $currentPage.URL .URL -}}class="active"{{- end -}}>
+        {{- if eq $currentPage.RelPermalink .URL -}}class="active"{{- end -}}>
         {{- upper .Name -}}</a>&nbsp;
     {{- end -}}<br id = "mob-break" />
     {{- $social := .Site.Menus.social -}}
     {{- range $elem_index, $elem_val := $social -}}
     <a href="{{- .URL -}}" target="_blank">{{ .Name }}</a>&nbsp;
-    {{- end -}}  
+    {{- end -}}
 </div>
